<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_desc_Now"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_desc"
        style="@style/mainScreenFont"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/album_image_260" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/song_name"/>

    <ImageView

        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/play_bar_resized" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/menubar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/playList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/your_list"
            style="@style/menuFont"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/albumList"
            style="@style/menuFont"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>
        <TextView
            android:id="@+id/nowPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nowPlaying"
            style="@style/menuFont"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>
        <TextView
            android:id="@+id/top10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/top_10"
            style="@style/menuFont"/>


    </LinearLayout>

</LinearLayout>